apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: nginx
